phase2_Dev/src/objects/Provider_Meeting_Participant__c.object
<CustomObject>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>GSA_Renewal_Participant__r.Name_text__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GSA_Renewal_Participant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If checked, it means that it&apos;s the latest information available for this provider</description>
        <label>GSA Renewal Participant</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2</booleanFilter>
            <filterItems>
                <field>Contact.Account.License_Status__c</field>
                <operation>equals</operation>
                <value>Licensed</value>
            </filterItems>
            <filterItems>
                <field>Contact.Account.Is_GSA__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Provider Meeting Participants</relationshipLabel>
        <relationshipName>Provider_Meeting_Participants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GSA_Renewal_Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For Renewal meeting, provider the participant belongs to. This field will be filled automatically.</description>
        <label>GSA Renewal Provider</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Provider Meeting Participants</relationshipLabel>
        <relationshipName>Provider_Meeting_Participants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Meeting_Region__c</fullName>
        <formula>Provider_Meeting__r.Meeting_Region__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meeting Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Type__c</fullName>
        <formula>TEXT( Provider_Meeting__r.Meeting_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meeting Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participation_Status__c</fullName>
        <description>Status of the registration / participation</description>
        <label>Participation Status</label>
        <picklist>
            <picklistValues>
                <fullName>Registered</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Attended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Potential_Provider_Name__c</fullName>
        <formula>Potential_Provider__r.Name_Text__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Potential Provider Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potential_Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For PPM meeting, potential provider that is registered / attended to this meeting</description>
        <label>Potential Provider</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Provider Meeting Participants</relationshipLabel>
        <relationshipName>Provider_Meeting_Participants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Provider_Meeting__c</fullName>
        <description>Meeting the participant is registered / attended to</description>
        <label>Provider Meeting</label>
        <referenceTo>Provider_Meeting__c</referenceTo>
        <relationshipLabel>Provider Meeting Participants</relationshipLabel>
        <relationshipName>Provider_Meeting_Participants</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Provider_Name__c</fullName>
        <formula>GSA_Renewal_Provider__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Provider Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduled_Start_Time__c</fullName>
        <formula>Provider_Meeting__r.Scheduled_Start__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduled Start Time</label>
        <type>DateTime</type>
    </fields>
    <label>Provider Meeting Participant</label>
    <nameField>
        <displayFormat>PMA-{0000000}</displayFormat>
        <label>Provider Meeting Participant No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Provider Meeting Participants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>GSA_Renewal_Provider_Mandatory</fullName>
        <active>true</active>
        <description>Must be filled if Provider Meeting.Type contains &quot;Renewal&quot;</description>
        <errorConditionFormula>ISPICKVAL( Provider_Meeting__r.Meeting_Type__c , &apos;Renewal (GSA)&apos;)    &amp;&amp; 
 ISBLANK(  GSA_Renewal_Participant__c  )</errorConditionFormula>
        <errorDisplayField>GSA_Renewal_Participant__c</errorDisplayField>
        <errorMessage>Mandatory if Provider Meeting.Type contains &quot;Renewal&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Meeting_type_matches_provider_type</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
AND(
  Potential_Provider__r.Lead_Record_Type_Hidden__c = &apos;Potential Provider GSA&apos;
  , TEXT(Provider_Meeting__r.Meeting_Type__c) &lt;&gt; &apos;PPM (GSA)&apos;),
AND(
  Potential_Provider__r.Lead_Record_Type_Hidden__c = &apos;Potential Provider FCC&apos;
  , TEXT(Provider_Meeting__r.Meeting_Type__c) &lt;&gt; &apos;PPM (FCC)&apos;)
)</errorConditionFormula>
        <errorMessage>Potential provider type does not match the provider meeting type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Potential_Provider_is_Mandatory</fullName>
        <active>true</active>
        <description>Must be filled if Provider Meeting.Type contains &quot;PPM&quot;</description>
        <errorConditionFormula>IF( 
AND( 
 OR(
 TEXT(  Provider_Meeting__r.Meeting_Type__c ) = &quot;PPM (FCC)&quot;,
 TEXT(  Provider_Meeting__r.Meeting_Type__c ) = &quot;PPM (GSA)&quot;), 

LEN(   Potential_Provider__c   ) = 0), True, False)</errorConditionFormula>
        <errorDisplayField>Potential_Provider__c</errorDisplayField>
        <errorMessage>Mandatory if Provider Meeting.Type contains &quot;PPM&quot;</errorMessage>
    </validationRules>
</CustomObject>